--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "next": "12.1.6",
+    "nextjs-progressbar": "^0.0.14",
     "node-fetch": "^2.6.7",
     "react": "18.1.0",
     "react-dom": "18.1.0",
